--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container">
                 <h1 class="title-one">Effective Solutions
                     for Your Business</h1>
-                <button type="button" class="order-service-button" data-modal-open>Order Service</button>
+                <button type="submit" class="order-service-button" data-modal-open>Order Service</button>
 
 
             </div>
@@ -379,8 +379,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="form-subscribe">
+                <p class="form-text">Subscribe</p>
+                <form class="footer-form">
+                    <label class="footer-label">
+                        <input class="footer-input" type="email" name="email" placeholder="E-mail">
+                    </label>
+                    <button class="footer-btn" type="submit">Subscribe
+                        <svg class="icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+
         </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="close-button" type="button" data-modal-close>
@@ -388,6 +403,74 @@
                     <use href="./images/icons.svg#icon-close-black"></use>
                 </svg>
             </button>
+
+
+            <p class="modal-text">Leave your contacts and we will call you back</p>
+
+            <form class="modal-form">
+                <div class="form-element">
+                    <label class="form-label" for="name">
+                        Name
+                    </label>
+
+                    <div class="input-icon">
+                        <input class="form-input" type="text" name="name" id="name">
+                        <svg class="icon-black" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person-black"></use>
+                        </svg>
+                    </div>
+
+                </div>
+
+                <div class="form-element">
+                    <label class="form-label" for="phone">
+                        Phone</label>
+
+                    <div class="input-icon">
+                        <input class="form-input" type="tel" name="phone" id="phone">
+                        <svg class="icon-black" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone-black"></use>
+                        </svg>
+                    </div>
+                </div>
+
+
+                <div class="form-element">
+                    <label class="form-label" for="email">
+                        Email</label>
+
+                    <div class="input-icon">
+                        <input class="form-input" type="email" name="email" id="email">
+                        <svg class="icon-black" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email-black"></use>
+                        </svg>
+                    </div>
+                </div>
+
+
+                <div class="form-element label">
+                    <label class="form-label" for="i-accept">
+                        Comment</label>
+                    <textarea class="form-input form-textarea" name="comment" placeholder="Text input"></textarea>
+                </div>
+
+
+                <div class="check">
+
+                    <input class="checkbox-hidden input-check" type="checkbox" id="i-accept" name="i-accept">
+
+                    <label class="accept-text" for="i-accept">
+                        <span class="check-span">
+                            <svg class="icon-span" width="10" height="8">
+                                <use href="./images/icons.svg#icon-property-click"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the <a class="link-modal" href=""> Privacy Policy</a>
+                    </label>
+                </div>
+
+                <button class="form-button" type="submit">Send</button>
+            </form>
         </div>
     </div>
 
