--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,11 @@
             <div class="container">
                 <h1 class="visually-hidden">Our portfolio</h1>
                 <ul class="list filtr">
-                    <li><button type="button" class="filtr-button">All</button></li>
-                    <li><button type="button" class="filtr-button">Web Site</button></li>
-                    <li><button type="button" class="filtr-button">App</button></li>
-                    <li><button type="button" class="filtr-button">Design</button></li>
-                    <li><button type="button" class="filtr-button">Marketing</button></li>
+                    <li><button type="submit" class="filtr-button">All</button></li>
+                    <li><button type="submit" class="filtr-button">Web Site</button></li>
+                    <li><button type="submit" class="filtr-button">App</button></li>
+                    <li><button type="submit" class="filtr-button">Design</button></li>
+                    <li><button type="submit" class="filtr-button">Marketing</button></li>
                 </ul>
                 <ul class="list table">
                     <li class="table-element">
@@ -217,6 +217,7 @@
         </section>
 
     </main>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-info">
@@ -258,6 +259,20 @@
                     </li>
                 </ul>
             </div>
+            <div class="form-subscribe">
+                <p class="form-text">Subscribe</p>
+                <form class="footer-form">
+                    <label class="footer-label">
+                        <input class="footer-input" type="email" name="email" placeholder="E-mail">
+                    </label>
+                    <button class="footer-btn" type="submit">Subscribe
+                        <svg class="icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
+
         </div>
     </footer>
 </body>
