--- a/index.html
+++ b/index.html
@@ -409,13 +409,13 @@
 
             <form class="modal-form">
                 <div class="form-element">
-                    <label class="form-label" for="name">
+                    <label class="form-label" for="user-name">
                         Name
                     </label>
 
                     <div class="input-icon">
-                        <input class="form-input" type="text" name="name" id="name">
-                        <svg class="icon-black" width="18" height="18">
+                        <input class="form-input" type="text" name="user-name" id="user-name">
+                        <svg class="icon-black" width="18" height="24">
                             <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
                     </div>
@@ -428,7 +428,7 @@
 
                     <div class="input-icon">
                         <input class="form-input" type="tel" name="phone" id="phone">
-                        <svg class="icon-black" width="18" height="18">
+                        <svg class="icon-black" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black"></use>
                         </svg>
                     </div>
@@ -441,7 +441,7 @@
 
                     <div class="input-icon">
                         <input class="form-input" type="email" name="email" id="email">
-                        <svg class="icon-black" width="18" height="18">
+                        <svg class="icon-black" width="18" height="24">
                             <use href="./images/icons.svg#icon-email-black"></use>
                         </svg>
                     </div>
@@ -449,17 +449,19 @@
 
 
                 <div class="form-element label">
-                    <label class="form-label" for="i-accept">
+                    <label class="form-label" for="user-comment">
                         Comment</label>
-                    <textarea class="form-input form-textarea" name="comment" placeholder="Text input"></textarea>
+                    <textarea class="form-input form-textarea" name="user-comment" placeholder="Text input"
+                        id="user-comment"></textarea>
                 </div>
 
 
                 <div class="check">
 
-                    <input class="checkbox-hidden input-check" type="checkbox" id="i-accept" name="i-accept">
+                    <input class="visually-hidden input-check" type="checkbox" id="user-privacy" value="true"
+                        name="user-privacy">
 
-                    <label class="accept-text" for="i-accept">
+                    <label class="accept-text" for="user-privacy">
                         <span class="check-span">
                             <svg class="icon-span" width="10" height="8">
                                 <use href="./images/icons.svg#icon-property-click"></use>
